# particle-simulation-rust

./: Cargo.toml
src/: compute.wgsl  constants.rs  main.rs  multithreaded_scene.rs  multithreaded_scene_v2.rs  particle_type.rs  receive_into_slice.rs  scene_like.rs  vector.rs  wgpu_scene.rs
