[package]
name = "particle_simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
piston = "1.0.0"
piston2d-graphics = "0.44.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.85.0"
rand = "0.9.1"
threadpool = "1.8.1"
rand_chacha = "0.9.0"
wgpu = "26.0.1"
pollster = "0.4.0"
bytemuck = "1.23.2"
flume = "0.11.1"
